# sharedmemos

./: .gitignore  Dockerfile  README.md
memos-public-proxy/: pyproject.toml
memos-public-proxy/src/memos_public_proxy/html/: memos_public_proxy.html  pelican_basic.html
sharedmemos/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
sharedmemos/src/sharedmemos/: app.py
sharedmemos/src/sharedmemos/html/: pelican_basic.html  sharedmemos.html
