[project]
name = "sharedmemos"
version = "0.1.0"
description = ""
authors = [
    {name = "Colin"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "flask>=3.1.1,<4.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "requests>=2.32.4,<3.0.0",
    "markdown2>=2.5.4,<3.0.0",
    "latex2mathml>=3.78.0,<4.0.0",
    "pygments>=2.19.2,<3.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
